# cpp-learn

./: .gitignore
OpenGL/: CMakeLists.txt
OpenGL/GLSL/: frgshad1.fs  frgshad2.fs  fs3.fs  vertshad1.vs  vertshad2.vs  vs3.vs
OpenGL/glm/doc/api/: a00031_source.html  a00148.html
OpenGL/include/: camera.h  shader.hpp  texture.h  vertex_array.h
OpenGL/src/: camera.cpp  function_drawer.cpp  main.cpp  shader.cpp  texture.cpp  vertex_array.cpp
learnCV/: CMakeLists.txt  main.cpp  myalg.cpp  myalg.h  somealg.cpp  timer.h  像素距离和连通域  噪音和滤波.txt  形态学操作.txt  腐蚀和膨胀.txt
learnCV/notes/: ROI和金字塔.txt  卷积和滤波.txt  图像分析和修复0  图像变换.txt  图像变换和分割  数据类.txt  文件读写.txt  机器学习.txt  特征点检测和匹配  目标检测.txt  目标跟踪.txt  直方图.txt  窗口互动.txt  立体视觉.txt  简单像素操作.txt  绘制.txt  颜色空间和像素操作.txt
learnGL/: CMakeLists.txt
learnGL/GLSL/: frgshad2.fs  vertshad1.vs  vertshad2.vs
learnGL/glad/: CMakeLists.txt
learnGL/glm/doc/: man.doxy
learnGL/glm/doc/api/: a00050_source.html  a00101_source.html
learnGL/include/: function_image.hpp  init_window.hpp  shader.hpp  stb_image.h  vertex_array.h
learnGL/src/: CMakeLists.txt  camera.cpp  function_drawer.cpp  function_image.cpp  init_window.cpp  main.cpp  shader.cpp  test.c  vertex_array.cpp
